fixed header margin issue moved HTML under the given starting container to maintain the same margins.  adjusted nav bar margins and widths for better spacing.  this is complete through task 4

--- a/css/index.css
+++ b/css/index.css
@@ -169,15 +169,17 @@ img {
   margin: 0 auto;
 }
 .nav-bar {
+  border: 1px solid black;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   height: 10vh;
   border-bottom: 1.5px dashed #C0C0C0;
+  width: 85%;
   margin: 0% auto;
-  width: 80%;
 }
 .nav-bar .nav-text {
+  border: 1px solid black;
   height: 100%;
   width: 25%;
   text-align: center;
@@ -186,12 +188,13 @@ img {
   color: #212529;
 }
 .nav-bar .nav-links {
+  border: 1px solid black;
   display: flex;
   justify-content: space-evenly;
   height: 100%;
   width: 40%;
   text-align: center;
-  padding-top: 2.5%;
+  padding-top: 3%;
 }
 .nav-bar .nav-links a {
   text-decoration: none;
@@ -214,16 +217,6 @@ header .header-img img {
 }
 header .header-sec .header-sec-top {
   padding-top: 2%;
-}
-header .header-sec .header-sec-top h2 {
-  text-align: center;
-}
-header .header-sec .header-sec-bot {
-  padding-bottom: 2%;
-}
-header .header-sec .header-sec-bot p {
-  text-align: center;
-  line-height: 0.75;
 }
 .home .content-section {
   margin: 30px 0;
