--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,33 +1,10 @@
 header {
-
   .header-img img {
-
     width: 100%;
-
   }//closes header-img img tag
-
   .header-sec .header-sec-top {
-
     padding-top: 2%;
-
-    h2 {
-      text-align: center;
-    }
-
   }//closes header-sec .header-sec-top tag
-
-  .header-sec .header-sec-bot {
-
-    padding-bottom: 2%;
-
-    p {
-      text-align: center;
-      line-height: .75;
-
-    }//closes header bottom p tag
-
-  }//closes header-sec .header-sec-bot tag
-
 }//closes header tag
 
 .home {
