--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,60 +1,34 @@
 // Navigation Styles here
 .nav-bar {
-
+    border: 1px solid black;
     display:flex;
-
-    justify-content: space-between;
-
+    justify-content: space-around;
     align-items: center;
-
     height: 10vh;
-
-    border-bottom: 1.5px dashed @navigation-border;
+    border-bottom: 1.5px dashed @navigation-border;    
+    width: 85%;
     margin: 0% auto;
-    width: 80%;
-
     .nav-text {
-
+        border: 1px solid black;
         height: 100%;
-
         width: 25%;
-
         text-align: center;
-
         padding-top: 2.5%;
-
         font-size: 1.2rem;
-
         color: @shark;
-
     }//closes nav-text
-
     .nav-links {
-
+        border: 1px solid black;
         display:flex;
-
         justify-content: space-evenly;
-
         height: 100%;
-
         width: 40%;
-
         text-align:center;
-
-        padding-top: 2.5%;
-
+        padding-top: 3%;
         a {
-
             text-decoration: none;
-
             font-size: 2rem;
-
-            color: @shark;
-
-            
-
+            color: @shark;        
         }//closes anchor tag 
-
     }//closes nav-links
-
 }//closes nav bar 
